# CTDYN

./: .gitignore  .readthedocs.yaml  CHANGES.txt  CMakeLists.txt  CMakePresets.json  LICENSE  MANIFEST.in  Makefile  README.md  install  pyproject.toml
.github/workflows/: create_json.py  documentation.yml  sphinx_build.yml  test.yml  update_conf.sh
SOURCES/: .advection.f.swp  Makefile  advection.f  b2func  b3func  bb.f  c1s2func  cdfunc  cint  cio  cvect  dyna.f  hunt.f  sort2.f  write_poloidal.f
docs/source/: conf.py  index.rst  requirements.txt
docs/source/usage/api/: index.rst  interface.rst  namelist_description.rst  visualisation.rst
docs/source/usage/installation/: installation.rst
docs/source/usage/namelist/: namelist_description.rst
docs/source/usage/quickstart/: quickstart.rst
docs/source/usage/user_guide/: index.rst
docs/source/usage/user_guide/installation/: installation.rst
docs/source/usage/user_guide/namelist/: namelist_description.rst
docs/source/usage/user_guide/parallel_run/: parallel_run.rst
docs/source/usage/user_guide/quickstart/: quickstart.rst
notebooks/: parallel_run.ipynb  quickstart.ipynb
parameters/: input_aomeg_A0  input_isA0  input_test_2  input_test_omega
parmeter/: aomeg_A0  isA0  test_omega.txt
src/: Makefile  advection.f  b4func  b5func  bessel.f  err.f  func_flow.f  helicity.f  load_pol.f  write_toroidal.f
src/CTDYN/: CMakeLists.txt  Makefile  advection.f  advection.f90  b2func.f90  b3func.f90  b4func.f90  b5func.f90  bb.f  bb.f90  bessel.f90  c1s2func.f90  c3s2func  c3s2func.f90  ccov  ccov.f90  cdfunc.f90  cint  cint.f90  cio.f90  cvect.f90  dyna.f  dyna.f90  err.f90  func_flow.f90  helicity.f90  hunt.f90  kind_parameters.f90  load_pol.f90  load_tor.f  load_tor.f90  load_vec.f  load_vec.f90  main.f90  mathfunc.f90  outw.f  plg.f90  profiles.f90  sort.f90  sort2.f90  (+11 more)
src/py_ctdyn/: __init__.py  ctdyn.py  outputs.py
src/py_ctdyn/templates/: empty_inlist
tests/: test.py
tests/inputs/: inlist_default  inlist_ref  test_ref
tests/test_2/: crtal_A0  input_A0
